--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
             <br>
             <div>
                 <label for="password">Confirm Password:*</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="confirmPassword" id="confirmPassword">
             </div>
             <br>
             <div>
@@ -56,7 +56,7 @@
             <br>
             <div>
                 <p>A short description about myself:</p>
-                <textarea name="description" id="" cols="30" rows="4"></textarea>
+                <textarea name="description" id="descriptions" cols="30" rows="4"></textarea>
             </div>
             <br>
             <div>
